@@ -14,6 +14,7 @@
 ATTACKTYPE=CLOSECOMBAT;
 DAMAGE.VAL=2;
 DAMAGE.MAX=20;
+DAMAGE.OBITUARY="OB_Punch";
 ATTACK_HEIGHT=32;
 ATTACKRANGE=96;
 ACCURACY_ANGLE=0;
@@ -27,6 +28,7 @@ PUFF=PUFF;
 ATTACKTYPE=CLOSECOMBAT;
 DAMAGE.VAL=2;
 DAMAGE.MAX=20;
+DAMAGE.OBITUARY="OB_Saw";
 ATTACK_HEIGHT=28;
 X_OFFSET=4;
 ACCURACY_ANGLE=12;
@@ -41,6 +43,7 @@ ATTACKTYPE=SHOT;
 SHOTCOUNT=1;
 DAMAGE.VAL=5;
 DAMAGE.MAX=15;
+DAMAGE.OBITUARY="OB_Pistol";
 ATTACK_HEIGHT=32;
 ACCURACY_ANGLE=3;
 ACCURACY_SLOPE=1.5;
@@ -53,6 +56,7 @@ ATTACKTYPE=SHOT;
 SHOTCOUNT=7;
 DAMAGE.VAL=5;
 DAMAGE.MAX=15;
+DAMAGE.OBITUARY="OB_Shotgun";
 ATTACK_HEIGHT=32;
 ACCURACY_ANGLE=6;
 ACCURACY_SLOPE=0;
@@ -65,6 +69,7 @@ ATTACKTYPE=SHOT;
 SHOTCOUNT=20;
 DAMAGE.VAL=5;
 DAMAGE.MAX=15;
+DAMAGE.OBITUARY="OB_Shotgun";
 ATTACK_HEIGHT=32;
 ACCURACY_ANGLE=12;
 ACCURACY_SLOPE=6;
@@ -77,6 +82,7 @@ ATTACKTYPE=SHOT;
 SHOTCOUNT=1;
 DAMAGE.VAL=5;
 DAMAGE.MAX=15;
+DAMAGE.OBITUARY="OB_Chaingun";
 ATTACK_HEIGHT=32;
 ACCURACY_ANGLE=6;
 ACCURACY_SLOPE=3;
@@ -91,11 +97,13 @@ RADIUS=11;
 SPEED=20;
 DAMAGE.VAL=20;
 DAMAGE.MAX=160;
+DAMAGE.OBITUARY="OB_Missile";
 ATTACKRANGE=2048;
 ATTACK_SPECIAL=KILL_FAILED_SPAWN;
 PROJECTILE_SPECIAL=NOBLOCKMAP,DROPOFF,NOGRAVITY,MISSILE,NOSHADOW;
 ATTACK_HEIGHT=32;
 EXPLODE_DAMAGE.VAL=128;
+EXPLODE_DAMAGE.OBITUARY="OB_EXPLODE";
 LAUNCH_SOUND=RLAUNC;
 DLIGHT.TYPE=ADD;
 DLIGHT.RADIUS=150;
@@ -120,6 +128,7 @@ HEIGHT=8;
 RADIUS=13;
 DAMAGE.VAL=5;
 DAMAGE.MAX=40;
+DAMAGE.OBITUARY="OB_Plasma";
 ATTACK_HEIGHT=32;
 SPEED=25;
 KEEP_FIRING_CHANCE=3.92%;
@@ -152,6 +161,7 @@ RADIUS=20;
 TRANSLUCENCY=50%;
 DAMAGE.VAL=15;
 DAMAGE.MAX=120;
+DAMAGE.OBITUARY="OB_BFG";
 ATTACKRANGE=2048;
 PROJECTILE_SPECIAL=NOGRAVITY,NOSHADOW;
 DLIGHT.TYPE=ADD;
@@ -173,6 +183,7 @@ RADIUS=13;
 SPEED=25;
 DAMAGE.VAL=100;
 DAMAGE.MAX=800;
+DAMAGE.OBITUARY="OB_BFG";
 ATTACK_HEIGHT=32;
 ATTACKRANGE=2048;
 TRANSLUCENCY=66%;
@@ -206,6 +217,7 @@ ATTACKTYPE=SHOT;
 SHOTCOUNT=1;
 DAMAGE.VAL=3;
 DAMAGE.MAX=15;
+DAMAGE.OBITUARY="OB_Zombie";
 ACCURACY_ANGLE=22;
 ACCURACY_SLOPE=12;
 ENGAGED_SOUND=PISTOL;
@@ -217,6 +229,7 @@ ATTACKTYPE=SHOT;
 SHOTCOUNT=3;
 DAMAGE.VAL=3;
 DAMAGE.MAX=15;
+DAMAGE.OBITUARY="OB_ShotgunGuy";
 ACCURACY_ANGLE=14;
 ACCURACY_SLOPE=0;
 ENGAGED_SOUND=SHOTGN;
@@ -229,6 +242,7 @@ ATTACKTYPE=SHOT;
 SHOTCOUNT=1;
 DAMAGE.VAL=3;
 DAMAGE.MAX=15;
+DAMAGE.OBITUARY="OB_ChaingunGuy";
 ACCURACY_ANGLE=22;
 ACCURACY_SLOPE=12;
 ENGAGED_SOUND=SHOTGN;
@@ -240,6 +254,7 @@ PUFF=PUFF;
 ATTACKTYPE=CLOSECOMBAT;
 DAMAGE.VAL=3;
 DAMAGE.MAX=24;
+DAMAGE.OBITUARY="OB_ImpClaw";
 ENGAGED_SOUND=CLAW;
 ATTACKRANGE=64;
 ATTACK_SPECIAL=NEED_SIGHT,FACE_TARGET;
@@ -250,6 +265,7 @@ HEIGHT=8;
 RADIUS=6;
 DAMAGE.VAL=3;
 DAMAGE.MAX=24;
+DAMAGE.OBITUARY="OB_Imp";
 ATTACK_HEIGHT=32;
 SPEED=10;
 FAST=2;
@@ -277,6 +293,7 @@ STATES(DEATH)=BAL1:C:0:BRIGHT:DLIGHT_SET(400),
 ATTACKTYPE=CLOSECOMBAT;
 DAMAGE.VAL=4;
 DAMAGE.MAX=40;
+DAMAGE.OBITUARY="OB_Demon";
 ATTACKRANGE=64;
 ATTACK_SPECIAL=NEED_SIGHT,FACE_TARGET;
 
@@ -284,6 +301,7 @@ ATTACK_SPECIAL=NEED_SIGHT,FACE_TARGET;
 ATTACKTYPE=CLOSECOMBAT;
 DAMAGE.VAL=4;
 DAMAGE.MAX=40;
+DAMAGE.OBITUARY="OB_Dog";
 ATTACKRANGE=64;
 ATTACK_SPECIAL=NEED_SIGHT,FACE_TARGET;
 
@@ -291,6 +309,7 @@ ATTACK_SPECIAL=NEED_SIGHT,FACE_TARGET;
 ATTACKTYPE=SKULLFLY;
 DAMAGE.VAL=3;
 DAMAGE.MAX=24;
+DAMAGE.OBITUARY="OB_Skull";
 ASSAULT_SPEED=20;
 ATTEMPT_SOUND=SKLATK;
 ATTACK_SPECIAL=FACE_TARGET;
@@ -299,6 +318,7 @@ ATTACK_SPECIAL=FACE_TARGET;
 ATTACKTYPE=CLOSECOMBAT;
 DAMAGE.VAL=10;
 DAMAGE.MAX=60;
+DAMAGE.OBITUARY="OB_CacoBite";
 ATTACKRANGE=64;
 ATTACK_SPECIAL=NEED_SIGHT,FACE_TARGET;
 
@@ -308,6 +328,7 @@ HEIGHT=8;
 RADIUS=6;
 DAMAGE.VAL=5;
 DAMAGE.MAX=40;
+DAMAGE.OBITUARY="OB_Cacodemon";
 ATTACK_HEIGHT=32;
 LAUNCH_SOUND=FIRSHT;
 SPEED=10;
@@ -335,6 +356,7 @@ STATES(DEATH)=BAL2:C:0:BRIGHT:DLIGHT_SET(500),
 ATTACKTYPE=CLOSECOMBAT;
 DAMAGE.VAL=6;
 DAMAGE.MAX=60;
+DAMAGE.OBITUARY="OB_RevPunch";
 ATTEMPT_SOUND=SKESWG;
 ENGAGED_SOUND=SKEPCH;
 ATTACKRANGE=64;
@@ -345,6 +367,7 @@ HEIGHT=8;
 RADIUS=11;
 DAMAGE.VAL=10;
 DAMAGE.MAX=80;
+DAMAGE.OBITUARY="OB_Revenant";
 ATTACK_HEIGHT=48;
 SPEED=10;
 NO_TRACE_CHANCE=50%;
@@ -373,6 +396,7 @@ STATES(DEATH)=FBXP:A:0:BRIGHT:DLIGHT_FADE(0),
 ATTACKTYPE=CLOSECOMBAT;
 DAMAGE.VAL=10;
 DAMAGE.MAX=80;
+DAMAGE.OBITUARY="OB_BaronClaw";
 ENGAGED_SOUND=CLAW;
 ATTACKRANGE=64;
 ATTACK_SPECIAL=NEED_SIGHT,FACE_TARGET;
@@ -383,6 +407,7 @@ HEIGHT=8;
 RADIUS=6;
 DAMAGE.VAL=8;
 DAMAGE.MAX=64;
+DAMAGE.OBITUARY="OB_Baron";
 ATTACK_HEIGHT=32;
 SPEED=15;
 FAST=1.33333;
@@ -428,6 +453,7 @@ HEIGHT=8;
 RADIUS=6;
 DAMAGE.VAL=8;
 DAMAGE.MAX=64;
+DAMAGE.OBITUARY="OB_Mancubus";
 ATTACK_HEIGHT=32;
 SPEED=20;
 PROJECTILE_SPECIAL=NOBLOCKMAP,MISSILE,DROPOFF,NOGRAVITY,NOSHADOW;
@@ -457,6 +483,7 @@ HEIGHT=8;
 RADIUS=13;
 DAMAGE.VAL=5;
 DAMAGE.MAX=40;
+DAMAGE.OBITUARY="OB_Arachnotron";
 ATTACK_HEIGHT=16;
 SPEED=25;
 KEEP_FIRING_CHANCE=3.92%;
@@ -487,6 +514,7 @@ ATTACKTYPE=TRACKER;
 RADIUS=20;
 HEIGHT=16;
 DAMAGE.VAL=20;
+DAMAGE.OBITUARY="OB_Archvile";
 EXPLODE_DAMAGE.VAL=70;
 ATTEMPT_SOUND=VILATK;
 ENGAGED_SOUND=BAREXP;
@@ -538,12 +566,14 @@ HEIGHT=8;
 RADIUS=11;
 DAMAGE.VAL=20;
 DAMAGE.MAX=160;
+DAMAGE.OBITUARY="OB_Cyberdemon";
 SPEED=20;
 ACCURACY_ANGLE=0;
 ACCURACY_SLOPE=0;
 ATTACK_HEIGHT=44;
 X_OFFSET=20;
 EXPLODE_DAMAGE.VAL=128;
+EXPLODE_DAMAGE.OBITUARY="OB_Cyberdemon";
 ATTACK_SPECIAL=FACE_TARGET;
 PROJECTILE_SPECIAL=NOBLOCKMAP,DROPOFF,NOGRAVITY,MISSILE,NOSHADOW;
 LAUNCH_SOUND=RLAUNC;
@@ -668,6 +698,7 @@ HEIGHT=8;
 RADIUS=6;
 DAMAGE.VAL=8;
 DAMAGE.MAX=64;
+DAMAGE.OBITUARY="OB_Mancubus";
 ATTACK_HEIGHT=24;
 X_OFFSET=-24;
 SPEED=20;
@@ -694,6 +725,7 @@ HEIGHT=8;
 RADIUS=6;
 DAMAGE.VAL=8;
 DAMAGE.MAX=64;
+DAMAGE.OBITUARY="OB_Mancubus";
 ATTACK_HEIGHT=24;
 X_OFFSET=24;
 SPEED=20;
