@@ -30,14 +30,17 @@ LIGHT_DARKTIME=15T;
 LIGHT_BRIGHTTIME=5T;
 DAMAGE.VAL=20;
 DAMAGE.DELAY=32T;
+DAMAGE.OBITUARY="OB_SECTOR";
 
 [5]  // Damage Large
 DAMAGE.VAL=10;
 DAMAGE.DELAY=32T;
+DAMAGE.OBITUARY="OB_SECTOR";
 
 [7]  // Damage Small
 DAMAGE.VAL=5;
 DAMAGE.DELAY=32T;
+DAMAGE.OBITUARY="OB_SECTOR";
 
 [8]  // Light Oscillate
 LIGHT_TYPE=GLOW;
@@ -85,6 +88,7 @@ CEILING.SFX_DOWN=DORCLS;
 [16]  // Damage Extreme
 DAMAGE.VAL=20;
 DAMAGE.DELAY=32T;
+DAMAGE.OBITUARY="OB_SECTOR";
 
 [17]  // Light Flicker
 LIGHT_TYPE=FLICKER;
@@ -212,6 +216,7 @@ PUSH_SPEED=12;
 [4426] // EDGE Slime Extrafloor Scroll/Push NORTH
 DAMAGE.VAL=10;
 DAMAGE.DELAY=32T;
+DAMAGE.OBITUARY="OB_SLIME";
 USE_COLOURMAP=SLIME;
 SPECIAL=WHOLE_REGION;
 FRICTION=0.80;
@@ -225,6 +230,7 @@ PUSH_SPEED=12;
 [4427] // EDGE Slime LIQUID Extrafloor Scroll/Push NORTH EAST
 DAMAGE.VAL=10;
 DAMAGE.DELAY=32T;
+DAMAGE.OBITUARY="OB_SLIME";
 USE_COLOURMAP=SLIME;
 SPECIAL=WHOLE_REGION;
 FRICTION=0.80;
@@ -238,6 +244,7 @@ PUSH_SPEED=12;
 [4428] // EDGE Slime Extrafloor Scroll/Push EAST
 DAMAGE.VAL=10;
 DAMAGE.DELAY=32T;
+DAMAGE.OBITUARY="OB_SLIME";
 USE_COLOURMAP=SLIME;
 SPECIAL=WHOLE_REGION;
 FRICTION=0.80;
@@ -251,6 +258,7 @@ PUSH_SPEED=12;
 [4429] // EDGE Slime Extrafloor Scroll/Push SOUTH EAST
 DAMAGE.VAL=10;
 DAMAGE.DELAY=32T;
+DAMAGE.OBITUARY="OB_SLIME";
 USE_COLOURMAP=SLIME;
 SPECIAL=WHOLE_REGION;
 FRICTION=0.80;
@@ -264,6 +272,7 @@ PUSH_SPEED=12;
 [4430] // EDGE Slime Extrafloor Scroll/Push SOUTH
 DAMAGE.VAL=10;
 DAMAGE.DELAY=32T;
+DAMAGE.OBITUARY="OB_SLIME";
 USE_COLOURMAP=SLIME;
 SPECIAL=WHOLE_REGION;
 FRICTION=0.80;
@@ -277,6 +286,7 @@ PUSH_SPEED=12;
 [4431] // EDGE Slime Extrafloor Scroll/Push SOUTH WEST
 DAMAGE.VAL=10;
 DAMAGE.DELAY=32T;
+DAMAGE.OBITUARY="OB_SLIME";
 USE_COLOURMAP=SLIME;
 SPECIAL=WHOLE_REGION;
 FRICTION=0.80;
@@ -290,6 +300,7 @@ PUSH_SPEED=12;
 [4432] // EDGE Slime Extrafloor Scroll/Push WEST
 DAMAGE.VAL=10;
 DAMAGE.DELAY=32T;
+DAMAGE.OBITUARY="OB_SLIME";
 USE_COLOURMAP=SLIME;
 SPECIAL=WHOLE_REGION;
 FRICTION=0.80;
@@ -303,6 +314,7 @@ PUSH_SPEED=12;
 [4433] // EDGE Slime Extrafloor Scroll/Push NORTH WEST
 DAMAGE.VAL=10;
 DAMAGE.DELAY=32T;
+DAMAGE.OBITUARY="OB_SLIME";
 USE_COLOURMAP=SLIME;
 SPECIAL=WHOLE_REGION;
 FRICTION=0.80;
@@ -318,6 +330,7 @@ PUSH_SPEED=12;
 [4434] // EDGE Lava Extrafloor Scroll/Push NORTH
 DAMAGE.VAL=10;
 DAMAGE.DELAY=32T;
+DAMAGE.OBITUARY="OB_LAVA";
 USE_COLOURMAP=LAVA;
 SPECIAL=WHOLE_REGION;
 FRICTION=0.70;
@@ -331,6 +344,7 @@ PUSH_SPEED=12;
 [4435] // EDGE Lava Extrafloor Scroll/Push NORTH EAST
 DAMAGE.VAL=10;
 DAMAGE.DELAY=32T;
+DAMAGE.OBITUARY="OB_LAVA";
 USE_COLOURMAP=LAVA;
 SPECIAL=WHOLE_REGION;
 FRICTION=0.70;
@@ -344,6 +358,7 @@ PUSH_SPEED=12;
 [4436] // EDGE Lava Extrafloor Scroll/Push EAST
 DAMAGE.VAL=10;
 DAMAGE.DELAY=32T;
+DAMAGE.OBITUARY="OB_LAVA";
 USE_COLOURMAP=LAVA;
 SPECIAL=WHOLE_REGION;
 FRICTION=0.70;
@@ -357,6 +372,7 @@ PUSH_SPEED=12;
 [4437] // EDGE Lava Extrafloor Scroll/Push SOUTH EAST
 DAMAGE.VAL=10;
 DAMAGE.DELAY=32T;
+DAMAGE.OBITUARY="OB_LAVA";
 USE_COLOURMAP=LAVA;
 SPECIAL=WHOLE_REGION;
 FRICTION=0.70;
@@ -370,6 +386,7 @@ PUSH_SPEED=12;
 [4438] // EDGE Lava Extrafloor Scroll/Push SOUTH
 DAMAGE.VAL=10;
 DAMAGE.DELAY=32T;
+DAMAGE.OBITUARY="OB_LAVA";
 USE_COLOURMAP=LAVA;
 SPECIAL=WHOLE_REGION;
 FRICTION=0.70;
@@ -383,6 +400,7 @@ PUSH_SPEED=12;
 [4439] // EDGE Lava Extrafloor Scroll/Push SOUTH WEST
 DAMAGE.VAL=10;
 DAMAGE.DELAY=32T;
+DAMAGE.OBITUARY="OB_LAVA";
 USE_COLOURMAP=LAVA;
 SPECIAL=WHOLE_REGION;
 FRICTION=0.70;
@@ -396,6 +414,7 @@ PUSH_SPEED=12;
 [4440] // EDGE Lava Extrafloor Scroll/Push WEST
 DAMAGE.VAL=10;
 DAMAGE.DELAY=32T;
+DAMAGE.OBITUARY="OB_LAVA";
 USE_COLOURMAP=LAVA;
 SPECIAL=WHOLE_REGION;
 FRICTION=0.70;
@@ -409,6 +428,7 @@ PUSH_SPEED=12;
 [4441] // EDGE Lava Extrafloor Scroll/Push NORTH WEST
 DAMAGE.VAL=10;
 DAMAGE.DELAY=32T;
+DAMAGE.OBITUARY="OB_LAVA";
 USE_COLOURMAP=LAVA;
 SPECIAL=WHOLE_REGION;
 FRICTION=0.70;
@@ -553,6 +573,7 @@ SPECIAL=WHOLE_REGION;
 [4468] // EDGE Green Hue + Damage
 DAMAGE.VAL=10;
 DAMAGE.DELAY=32T;
+DAMAGE.OBITUARY="OB_SLIME";
 USE_COLOURMAP=SLIME;
 SPECIAL=WHOLE_REGION;
 FRICTION=0.80;
@@ -564,6 +585,7 @@ SPECIAL=WHOLE_REGION;
 [4470] // EDGE Red Hue + Damage
 DAMAGE.VAL=10;
 DAMAGE.DELAY=32T;
+DAMAGE.OBITUARY="OB_LAVA";
 USE_COLOURMAP=LAVA;
 SPECIAL=WHOLE_REGION;
 FRICTION=0.80;
